# clipboard-indicator-but-less-ugly

./: README.md  meson.build
src/: HistoryWidget.vala  Indicator.vala  meson.build
